[package]
name = "pallet-nft"
version = "4.0.0-dev"
authors = ["Peer Technologies <admin@peer.io>"]
edition = "2021"
license = "Apache-2.0"

repository = "https://github.com/PEER-Inc/blockchain-peer"
description = "FRAME pallet for nick management"
readme = "README.md"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

frame-system = { version = "4.0.0-dev", default-features = false, path = "../system" }

frame-support = { version = "4.0.0-dev", default-features = false, path = "../support" }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, path = "../benchmarking", optional = true }

sp-std = { version = "4.0.0-dev", default-features = false, path = "../../primitives/std" }

serde = { version = "1.0.119", optional = true }
sp-runtime = { version = "4.0.0-dev", default-features = false, path = "../../primitives/runtime" }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
sp-io = { version = "4.0.0-dev", default-features = false, path = "../../primitives/io" }
log = "0.4.16"

[dev-dependencies]
sp-core = { version = "4.0.0-dev", path = "../../primitives/core" }

sp-runtime = { version = "4.0.0-dev", default-features = false, path = "../../primitives/runtime" }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-std/std',
	'serde',
]
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
]
# Note: frame-support `try-runtime` feature is released after v3.
#   Uncomment the following line when `frame-support` version > `3.0.0`.
 try-runtime = ['frame-support/try-runtime']
